# commands

./: .gitignore  LICENSE  Little_Truckee_Summit  __init__.py  __main__.py  base64_8.py  bash8.py  bench8.py  bootstrapping_module.py  buildnumber.json  bytes  calltest.py  changeauthor.sh  chekc_connection.tmp  cli8.py  codegen8.py  conf.py  console8.py  cs8.py  del.json  del.py  delete.json  detect_enc.py  dict8.py  dir8.py  file8.py  gi.py  gui8.py  installreq8.py  int8.py  json8.py  learning8.py  linter.bat  linter.py  linter_all.bat  linter_all.py  list8.py  list_intput  locations8.py  log8.py  (+29 more)
..egigoka.github.io/commands/: base64_9.html  bash9.html  bench9.html  cli9.html  console9.html  const9.html  dict9.html  dir9.html  file9.html  funcs9.html  git9.html  gui9.html  id9.html  index.html  int9.html  json9.html  learning9.html  list9.html  locations9.html  log9.html  macos9.html  mouse9.html  network9.html  os9.html  path9.html  pip9.html  print9.html  process9.html  random9.html  resources9.html  ssh9.html  str9.html  threading9.html  time9.html  tkinter9.html  wget9.html  windows9.html  zip9.html
commands/: __init__.py  __main__.py  _version.py  archive9.py  audio9.py  base64_8.py  base64_9.py  base65536_9.py  bash8.py  bash9.py  bench8.py  bench9.py  buildnumber.json  buildnumber.py  bytes9.py  cache9.py  cli8.py  cli9.py  codegen8.py  codegen9.py  console8.py  console9.py  const8.py  const9.py  cs8.py  dict8.py  dict9.py  dir8.py  dir9.py  ffmpeg9.py  file8.py  file9.py  funcs9.py  gi.py  git8.py  git9.py  giv9.py  gui8.py  gui9.py  id9.py  (+49 more)
(+35 files in other folders)
